# intervals

./: README.md  pyproject.toml
.github/workflows/: actions.yml  blank.yml
intervals/: base.py
tests/: test_plain.py  test_sequential.py
